Include cover appropriately

--- a/latex/template.latex
+++ b/latex/template.latex
@@ -150,6 +150,10 @@ $if(title)$
 \maketitle
 $endif$
 
+\begin{figure}
+\includegraphics[width=\textwidth]{images/cover.png}
+\end{figure}
+
 $for(include-before)$
 $include-before$
 
